# File-Manager

./: .gitignore  CMakeLists.txt  README.md
Headers/: MainWindow.hpp
Headers/Dialogs/: AbstractDialog.hpp  CopyDialog.hpp  CrtFileDialog.hpp  DeleteDialog.hpp  FindDialog.hpp  MkdirDialog.hpp  QuitDialog.hpp  RmdirDialog.hpp
Headers/tests/frontend/: test_MainWindow.hpp
Tests/: CMakeLists.txt
Tests/src/: main.cpp
Tests/src/frontend/: test_MainWindow.cpp
src/: MainWindow.cpp  main.cpp
src/Dialogs/: AbstractDialog.cpp  CopyDialog.cpp  CrtFileDialog.cpp  DeleteDialog.cpp  MkdirDialog.cpp  QuitDialog.cpp  RmdirDialog.cpp
src/Dialogs/Ui/: CopyDialog.ui  CrtFileDialog.ui  DeleteDialog.ui  MkdirDialog.ui  QuitDialog.ui  RmdirDialog.ui
src/Ui/: MainWindow.ui
